fix wrapping issue
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/apidb/ApiCommonWebsite/trunk@58263 735e2a04-f8fc-0310-8a1b-f2942603c481

--- a/Site/webapp/wdkCustomization/css/dataset-searches.css
+++ b/Site/webapp/wdkCustomization/css/dataset-searches.css
@@ -335,7 +335,7 @@ td.search-mechanism a {
 .legend {
   right: 0em;
   color: #777777;
-  width: 70%;
+  width: 68%;
 }
 .legend div:first-child {
   color: black;
